// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Drawer > rendering > applies fullscreen, sheet, translucent and responsive classes with className 1`] = `
<div>
  <dialog
    aria-labelledby="_r_1_"
    class="max-large:drawer drawer-bottom fullscreen sheet translucent drawer-fit-content bazinga"
    open=""
    tabindex="-1"
  >
    Test
  </dialog>
</div>
`;

exports[`Drawer > rendering > renders a closed dialog with placement classes 1`] = `
<div>
  <dialog
    aria-labelledby="_r_0_"
    class="drawer drawer-start"
  >
    Test
  </dialog>
</div>
`;
